adding iframe fucntionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,11 @@
 
                 </div>
 
+                <iframe id="driverWiki" src="https://en.wikipedia.org/wiki/Main_Page"  width="500" height="500">
+
+
+                </iframe>
+
                 <div id="lineChart">
 
                 </div>
