--- a/templates/drivers.html
+++ b/templates/drivers.html
@@ -18,24 +18,29 @@
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="./">F1 Stats Dashboard</a>
-            <a class="navbar-brand" href="./drivers">Driver Info</a>
-            <a class="navbar-brand" href="./circuits">Circuit Info</a>
+            <a class="navbar-brand" type="button" href="./">Formula 1 Stats Dashboard</a>
         </div>
+            <ul class="nav navbar-nav">
+                <li><a href="./">Home</a></li>
+                <li class="active"><a href="./drivers">Drivers</a></li>
+                <li><a href="./circuits">Circuits</a></li>
+            </ul>
     </div>
 </div>
 
 
-<div class="container">
+<div id="outer" class="container">
     <div class="row">
 
-        <div class="col-sm-2">
+        <div class="col-sm-4">
             <h1>Choose a Driver</h1>
+            <div id="driverSelect"></div>
         </div>
+            <div id="driverPositions"></div>
 
-        <div class="col-sm-10">
+        <div class="col-sm-6">
 
-            <iframe id="driverWiki" src="https://en.wikipedia.org/wiki/Main_Page"  width="500" height="500">
+            <iframe id="driverWiki" src="https://en.wikipedia.org/wiki/Formula_One"  width="900" height="700">
 
             </iframe>
 
@@ -55,7 +60,7 @@
 
 
 <script src="{{ url_for ('static',filename='lib/js/keen.min.js') }}"></script>
-<script src="{{ url_for ('static',filename='js/graph.js') }}" type='text/javascript'></script>
+<script src="{{ url_for ('static',filename='js/graph_drivers.js') }}" type='text/javascript'></script>
 <script src="{{ url_for ('static',filename='lib/js/intro.js') }}" type="text/javascript"></script>
 </body>
 </html>
